fix(asset editor): Spacing
- Spacing fixed for optimal component highlighting

--- a/design/source/components/Asset-Editor/atoms/asset-divider/_asset-divider.scss
+++ b/design/source/components/Asset-Editor/atoms/asset-divider/_asset-divider.scss
@@ -5,6 +5,5 @@
     display: block;
     height: $asset-unit;
     border-bottom: $asset-color-border 1px solid;
-    margin-bottom: $asset-unit / 2;
   }
 }
