--- a/design/source/components/Asset-Editor/molecules/asset-head/_asset-head.scss
+++ b/design/source/components/Asset-Editor/molecules/asset-head/_asset-head.scss
@@ -31,5 +31,6 @@
   .a-asset-section-title {
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: $asset-unit / 2;
   }
 }
