--- a/design/source/components/Asset-Editor/molecules/asset-html/_asset-html.scss
+++ b/design/source/components/Asset-Editor/molecules/asset-html/_asset-html.scss
@@ -1,5 +1,5 @@
 .m-asset-html {
-  padding: 0 $asset-unit / 2 $asset-unit / 2;
+  padding: $asset-unit / 2;
 
   &:not(:last-child) {
     @extend %a-asset-divider;
