--- a/design/source/components/Asset-Editor/molecules/asset-image/_asset-image.scss
+++ b/design/source/components/Asset-Editor/molecules/asset-image/_asset-image.scss
@@ -1,5 +1,5 @@
 .m-asset-image {
-  padding: 0 $asset-unit / 2 $asset-unit / 2;
+  padding: $asset-unit / 2;
 
   &__image {
     width: 100%;
